--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@
   box-sizing: border-box;
   margin: 0;
 }
-html {
+.wrapper {
   overflow-x: hidden;
+  position: relative;
 }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 nav {
