--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Belleza&family=Nunito:wght@200;300;400&display=swap");
 
 * {
   box-sizing: border-box;
@@ -55,12 +55,22 @@ nav .nav-links li a {
 .nav-links .logout {
   color: #d7bdca;
 }
+.food-category {
+  margin: 4rem 5vw;
+}
+.category-title {
+  font-family: "Belleza", sans-serif;
+  font-size: 3em;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.2em;
+  letter-spacing: 4px;
 
+}
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2rem;
-  margin: 4rem 5vw;
   padding: 0;
   list-style-type: none;
 }
