--- a/css/add-product.css
+++ b/css/add-product.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   color: #111111;
+  overflow-x: clip;
 }
 
 nav {
@@ -18,14 +19,15 @@ nav {
   top: 0;
   transition: 0.3s;
   font-family: "Belleza", sans-serif;
+  opacity: 0;
+}
+nav:hover {
+  opacity: 1;
 }
 nav #navBtn {
   display: none;
 }
-.scrolled {
-  box-shadow: 0px 3px 19px -7px rgb(0 0 0 / 10%);
-  padding: 0 5vw;
-}
+
 .logo {
   width: 100px;
 }
@@ -52,10 +54,10 @@ nav .nav-links li a {
 
 .wrapper {
   display: flex;
-  height: 75vh;
+  height: calc(100vh - 150px);
   align-items: center;
   flex-direction: column;
-  margin-top: 4em;
+  justify-content: center;
 }
 .heading {
   margin-bottom: 2em;
@@ -120,7 +122,7 @@ form {
   box-shadow: 0px 1px 8px -2px rgb(0 0 0 / 10%);
   resize: none;
 }
-input::placeholder{
+input::placeholder {
   opacity: 0.5;
 }
 .submit {
