--- a/css/add-product.css
+++ b/css/add-product.css
@@ -112,6 +112,14 @@ form {
 .input textarea {
   height: 100px;
 }
+.input select {
+  width: 100%;
+  height: 41px;
+  outline: none;
+  padding: 1em;
+  border: none;
+  box-shadow: 0px 1px 8px -2px rgb(0 0 0 / 10%);
+}
 .input input,
 .input textarea {
   width: 98%;
